//网关服务
syntax = "proto3";

option go_package = "./;gateway";

//向网关发送消息请求
message SendMsgRequest {
  string from_id = 1;
  string to_id = 2;
  string msg_type = 3;
  string content_type = 4;
  string content = 5;
}

message SendMsgResponse{
  string msg = 1;
}

service GatewayService{
  //发送消息到网关
  rpc SendMsg(SendMsgRequest) returns(SendMsgResponse);
}